# yt-summarizer

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_NOTES.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  docker-compose.yml  fetch.py  models.py  notify.py  processed_videos.txt  pyproject.toml  requirements-dev.txt  requirements.txt  retry.py  state.py  subprocess_utils.py  summarize.py  summarizer.py  test_ytdlp.sh  transcribe.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: config.py  state.py
pipeline/: fetch.py  notify.py  summarize.py  transcribe.py
tests/: conftest.py  test_config.py  test_fetch.py  test_notify.py  test_retry.py  test_state.py  test_summarize.py  test_summarizer.py  test_transcribe.py
utils/: subprocess_utils.py
