[project]
name = "youtube-summary-discord"
version = "1.1.0"
description = "Downloads YouTube audio, transcribes with Whisper, summarizes with an LLM, and posts to Discord."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "yt-dlp==2025.3.31",
    "google-genai==1.10.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "requests-mock==1.12.1",
    "types-requests==2.32.0.20250328",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*", "google.*"]
ignore_missing_imports = true
